todo-app/manifest/broadcaster-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: broadcaster
spec:
  replicas: 6
  selector:
    matchLabels:
      app: broadcaster
  template:
    metadata:
      labels:
        app: broadcaster
    spec:
      containers:
        - name: broadcaster
          image: PROJECT/BROADCASTER
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "5m"
              memory: "25Mi"
            limits:
              cpu: "150m"
              memory: "100Mi"
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
            httpGet:
              path: /healthz
              port: 8080
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            httpGet:
              path: /readyz
              port: 8080
          ports:
            - name: health
              containerPort: 8080
