todo-app/manifest/nats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: nats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats:2.10.21-alpine
          args:
            - "-js=false"
            - "-m"
            - "8222"
          ports:
            - name: client
              containerPort: 4222
            - name: cluster
              containerPort: 6222
            - name: monitoring
              containerPort: 8222
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
