todo-app/manifest/todo-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: app
          image: PROJECT/BACKEND
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "5m"
              memory: "20Mi"
            limits:
              cpu: "150m"
              memory: "25Mi"
          ports:
            - name: todo-bc-port
              containerPort: 3000
