todo-app/manifest/statefullset.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-postgres-svc
  labels:
    app: todo-postgres
spec:
  ports:
  - port: 5432
    name: db
  clusterIP: None
  selector:
    app: todo-postgres-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: project
  name: todo-postgres-stset
spec:
  serviceName: todo-postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: todo-postgres-db
  template:
    metadata:
      labels:
        app: todo-postgres-db
    spec:
      containers:
        - name: todo-postgres-db
          image: postgres
          ports:
            - name: db
              containerPort: 5432
          volumeMounts:
            - name: todo-postgres-data-storage
              mountPath: /var/lib/postgresql
  volumeClaimTemplates:
    - metadata:
        name: todo-postgres-data-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 20Mi
